improvement view quest version admin

--- a/templates/admin/modifyEstimationQuest.html.twig
+++ b/templates/admin/modifyEstimationQuest.html.twig
@@ -21,7 +21,7 @@
                 <div class="col-11">
                     <h4>Ton téléphone a t-il été immergé dans l'eau ?</h4>
                 </div>
-                <div class="col-1">
+                <div class="col-1 info-bulle">
                     <img src="/images/info.png" alt="" title="Si ton téléphone est tombé dans l'eau, coche 'oui'"
                          class="w-50 h-50 d-inline">
                 </div>
@@ -32,12 +32,12 @@
             </div>
         </div>
 
-        <div class="container jumbotron">
+        <div class="container jumbo">
             <div class="row">
                 <div class="col-11">
                     <h4>Ton écran est-il endommagé ?</h4>
                 </div>
-                <div class="col-1">
+                <div class="col-1 info-bulle">
                     <img src="/images/info.png" alt="" title="Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé"
                          class="w-50 h-50 d-inline">
                 </div>
@@ -52,7 +52,7 @@
                 <div class="col-11">
                     <h4>La coque du téléphone est-elle endommagée ?</h4>
                 </div>
-                <div class="col-1">
+                <div class="col-1 info-bulle">
                     <img src="/images/info.png" alt="" title="Fissures, griffes, mauvais emboîtement, coche 'oui'"
                          class="w-50 h-50 d-inline">
                 </div>
@@ -62,12 +62,12 @@
             </div>
         </div>
 
-        <div class="container jumbotron">
+        <div class="container jumbo">
             <div class="row">
                 <div class="col-11">
                     <h4>As-tu des problèmes de charge au niveau de la batterie ?</h4>
                 </div>
-                <div class="col-1">
+                <div class="col-1 info-bulle">
                     <img src="/images/info.png" alt=""
                          title="Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'"
                          class="w-50 h-50 d-inline">
@@ -83,7 +83,7 @@
                 <div class="col-11">
                     <h4>Tous les boutons sont-ils fonctionnels ?</h4>
                 </div>
-                <div class="col-1">
+                <div class="col-1 info-bulle">
                     <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'non'"
                          class="w-50 h-50 d-inline">
                 </div>
@@ -92,10 +92,12 @@
                 </div>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="container">
+            <div class="col-3"></div>
+            <div class="col-6 mb-3">
                 IMEI: {{ form_widget(form.imei, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
             </div>
+            <div class="col-3"></div>
         </div>
 
         <div class="container">
