--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -21,7 +21,12 @@
             <div class="col-10">
                 <h4>Ton téléphone a t-il été en contact avec de l'eau ?</h4>
             </div>
-            <img src="/images/info.png" alt="" title="Si ton téléphone est tombé dans l'eau, coche 'oui'">
+            <div class="bubble-info">
+                <img class="bubble-info-img" src="/images/info.png" alt="">
+                <div class="bubble-info-bg">
+                </div>
+                <p class="bubble-info-txt">Si ton téléphone est tombé dans l'eau, coche 'oui'</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 choice">
@@ -36,7 +41,12 @@
             <div class="col-10">
                 <h4>Ton écran est-il endommagé ?</h4>
             </div>
-            <img src="/images/info.png" alt="" title="Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé">
+            <div class="bubble-info">
+                <img class="bubble-info-img" src="/images/info.png" alt="">
+                <div class="bubble-info-bg">
+                </div>
+                <p class="bubble-info-txt">Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 choice">
@@ -50,7 +60,12 @@
             <div class="col-10">
                 <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
-            <img src="/images/info.png" alt="" title="Fissures, griffes, mauvais emboîtement, coche 'oui'">
+            <div class="bubble-info">
+                <img class="bubble-info-img" src="/images/info.png" alt="">
+                <div class="bubble-info-bg">
+                </div>
+                <p class="bubble-info-txt">Fissures, griffes, mauvais emboîtement, coche 'oui'</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 choice">
@@ -64,8 +79,12 @@
             <div class="col-10">
                 <h4>As-tu des problèmes de charge au niveau de la batterie ?</h4>
             </div>
-            <img src="/images/info.png" alt=""
-                     title="Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'">
+            <div class="bubble-info">
+                <img class="bubble-info-img" src="/images/info.png" alt="">
+                <div class="bubble-info-bg">
+                </div>
+                <p class="bubble-info-txt">Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 choice">
@@ -79,7 +98,12 @@
             <div class="col-10">
                 <h4>Tous les boutons sont-ils fonctionnels ?</h4>
             </div>
-            <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'non'">
+            <div class="bubble-info">
+                <img class="bubble-info-img" src="/images/info.png" alt="">
+                <div class="bubble-info-bg">
+                </div>
+                <p class="bubble-info-txt">Si un de tes boutons ne fonctionne plus, coche 'non'</p>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 choice">
@@ -100,5 +124,10 @@
     <a class="secondary-button" href="{{ path("home") }}">Retour à l'accueil</a>
 
 </main>
+{% endblock %}
+
+{%  block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('modal_infos') }}
 {% endblock %}
 
