--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -5,8 +5,14 @@
     flex-direction : column;
     justify-content : center;
     margin: 3% auto ;
-    width: 40%;
+    width: 70%;
     cursor: pointer;
+    @media screen and (min-width: 740px) {
+        width: 60%;
+    }
+    @media screen and (min-width: 1024px) {
+        width: 40%;
+    }
 }
 
 .question {
