last debug on css

--- a/assets/scss/partnerList.scss
+++ b/assets/scss/partnerList.scss
@@ -8,7 +8,7 @@
         @media screen and (min-width: 740px){
             width: 70%;
             max-width: 70%;
-            margin: auto 20%;
+            margin: auto;
         }
 
         article {
