--- a/templates/faq/edit.html.twig
+++ b/templates/faq/edit.html.twig
@@ -12,7 +12,7 @@
 
     {{ include('faq/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a class="secondary-button" href="{{ path('faq_index') }}">Retour à la liste</a>
+    <a class="secondary-button" href="{{ path('admin_faq_index') }}">Retour à la liste</a>
 
     {{ include('faq/_delete_form.html.twig') }}
 {% endblock %}
