--- a/templates/organisms/new.html.twig
+++ b/templates/organisms/new.html.twig
@@ -16,5 +16,5 @@
     <button class="secondary-button add">Ajouter</button>
     {{ form_end(form) }}
 
-    <a class="secondary-button back" id="newLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
+    <a class="secondary-button back" id="newLink" href="{{ path('admin_organisms_index') }}">Retour à la liste</a>
 {% endblock %}
