--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -23,7 +23,7 @@
     padding: 15px;
     border-radius: 5px;
     background-color : $secondary-color;
-    opacity: 90%;
+    opacity: 0.9;
     color : white;
     cursor: pointer;
     margin: 0 auto;
@@ -33,7 +33,7 @@
 .answer {
     display : none;
     background-color : rgba(243, 252, 251, 0.35);
-    opacity: 95%;
+    opacity: 0.9;
     font-size : 1rem;
     font-weight: 300;
     border-radius: 2px;
