Adding message on account creation for RGPD

--- a/templates/infos/cgu.html.twig
+++ b/templates/infos/cgu.html.twig
@@ -3,8 +3,11 @@
 {% block title %}CGU{% endblock %}
 
 {% block body %}
-    <main id="cgu">
-        <h1 class="primary-title" >Conditions Générales d'Utilisation</h1>
-        <p>Cette page est en construction</p>
+    <main class="container">
+        <div class="row">
+            <div class="col-12 mx-auto text-center">
+                <h1 class="primary-title">Notre politique de confidentialité</h1>
+            </div>
+        </div>
     </main>
 {% endblock %}
