Adding a page for RGPD called protection

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,7 +83,7 @@
                      -
                     <a href="{{ path('cgu') }}" title="Conditions Générales d'Utilisation">CGU</a>
                      -
-                    <a href="#" title="Protection des données">Protections des données</a>
+                    <a href="{{ path('protection') }}" title="Protection des données">Protections des données</a>
                      -
                     <a href="#" title="Cookies">Cookies</a>
                      -
