Adding pages cookies, mentions, CGV and CGU in HomeController and in templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,15 +79,15 @@
                 <li><a href="{{ path('faq_index') }}" title="FAQ">Besoin d'aide ?</a></li>
                 <li><a href="{{ path('add_message') }}" title="Contact">Contacte-nous</a></li>
                 <li>Ce que l'on oublie de lire
-                     (<a href="{{ path('cgu') }}" title="Conditions Générales de Vente">CGV</a>
+                     (<a href="{{ path('cgv') }}" title="Conditions Générales de Vente">CGV</a>
                      -
                     <a href="{{ path('cgu') }}" title="Conditions Générales d'Utilisation">CGU</a>
                      -
                     <a href="{{ path('protection') }}" title="Protection des données">Protections des données</a>
                      -
-                    <a href="#" title="Cookies">Cookies</a>
+                    <a href="{{ path('cookies') }}" title="Cookies">Cookies</a>
                      -
-                    <a href="#" title="Mentions Légales">Mentions Légales</a>)
+                    <a href="{{ path('mentions') }}" title="Mentions Légales">Mentions Légales</a>)
                 </li>
             </ul>
             <div class="social-networks">
