--- a/templates/infos/protection.html.twig
+++ b/templates/infos/protection.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}CGU{% endblock %}
+{% block title %}Protection des données{% endblock %}
 
 {% block body %}
     <main class="container">
