--- a/templates/user/indexUsers.html.twig
+++ b/templates/user/indexUsers.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Collecteurs{% endblock %}
+{% block title %}Utilisateurs{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
