--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('collectors_delete', {'id': collector.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce collecteur ?');">
+<form method="post" action="{{ path('collectors_delete', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce collecteur ?');">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ collector.id) }}">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
     <button class="secondary-button">Supprimer</button>
 </form>
