--- a/templates/user/showCollector.html.twig
+++ b/templates/user/showCollector.html.twig
@@ -42,9 +42,8 @@
         </tbody>
     </table>
 
-    <a href="{{ path('collectors_index') }}">Retour à la liste</a>
-
-    <a href="{{ path('collectors_edit', {'id': user.id}) }}">Editer</a>
+    <a href="{{ path('collectors_index') }}"><button class="secondary-button mt-0 mb-1">Retour à la liste</button></a>
+    <a href="{{ path('collectors_edit', {'id': user.id}) }}"><button class="secondary-button mb-0">Editer</button></a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
