--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -92,6 +92,16 @@ a{
     margin : 15px auto;
 }
 
+.secondary-title{
+    text-transform : uppercase;
+    font-size : 0.9rem;
+    font-weight: 500;
+    color : $fourth-color;
+    padding : 1%;
+    width : 70%;
+    margin-left: 20%;
+}
+
 /* HEADER NAV */
 header{
     .logo-bipbip{
