--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="primary-button mb-1">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
