Correction of mistakes given into PR comments

--- a/templates/infos/mentions.html.twig
+++ b/templates/infos/mentions.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Mentions légales{% endblock %}
 
 {% block body %}
-    <main class="container">
+    <main class="container" xmlns="http://www.w3.org/1999/html">
         <div class="row">
             <div class="col-12 mx-auto text-center">
                 <h1 class="primary-title">Mentions légales</h1>
@@ -15,10 +15,10 @@
             </div>
             <div class="flex-column align-items-start mb-4">
                 <p class="mb-1">Responsable de publication</p>
-                <small class="text-muted">Bipbip Mobile est édité par la société Enviro Services France.<br><br>
-                    Enviro Services France<br>
-                    391 avenue Clément Ader<br>
-                    59111 Wambrechies </small>
+                <small class="text-muted">Bipbip Mobile est édité par la société Enviro Services France.<br>
+                Enviro Services France<br>
+                391 avenue Clément Ader<br>
+                59111 Wambrechies </p></small>
             </div>
             <div class="flex-column align-items-start mb-4">
                 <p class="mb-1">Autres informations</p>
