--- a/templates/infos/protection.html.twig
+++ b/templates/infos/protection.html.twig
@@ -33,7 +33,7 @@
                     ton compte client si tu es connecté
                     {% endif %}
                     , tu peux avoir accès à l'historique de tes estimations, aux ventes réalisées, ainsi qu'aux informations personnelles que tu as fournies.<br>
-                    Depuis cette page, tu peux modifier certaines données.</bfr></small>
+                    Depuis cette page, tu peux modifier certaines données.<br></small>
              </div>
             <div class="flex-column align-items-start mb-4">
                 <p class="mb-1">Comment demander le retrait de mes données ?</p>
