Correct last error in mentions

--- a/templates/infos/mentions.html.twig
+++ b/templates/infos/mentions.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Mentions légales{% endblock %}
 
 {% block body %}
-    <main class="container" xmlns="http://www.w3.org/1999/html">
+    <main class="container">
         <div class="row">
             <div class="col-12 mx-auto text-center">
                 <h1 class="primary-title">Mentions légales</h1>
