Page for admin to delete user older than 3 years

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -63,6 +63,7 @@
                         <a href="{{ path('collects_index') }}">Collectes</a>
                         <a href="{{ path('matrice_upload') }}">Matrice</a>
                         <a href="{{ path('admin_faq_index') }}">FAQ</a>
+                        <a href="{{ path('users_anon') }}">Anonymisation</a>
                     </div>
 
                 </div>
