--- a/templates/estimation/final_price.html.twig
+++ b/templates/estimation/final_price.html.twig
@@ -13,12 +13,12 @@
                 {% if app.user %}
                 <div class="jumbotron">
                     <h4>Pour finaliser la vente de ton téléphone, </h4>
-                    <a class="btn btn-primary" href="{{ path("show_collect") }}">Choisis une collecte</a>
+                    <a class="btn btn-primary" href="{{ path("mode_envoi") }}">Choisis une collecte</a>
                 </div>
                 {% else %}
                 <div class="jumbotron">
                     <h4>Pour finaliser la vente de ton téléphone, crée ton compte et accède aux lieux de collecte</h4>
-                    <a class="btn btn-primary" href="{{ path("estimation_register_user", {estimation: estimation.id}) }}">Créer mon compte</a>
+                    <a class="btn btn-primary" href="{{ path("estimation_register_user", {'estimation': estimation.id}) }}">Créer mon compte</a>
                 </div>
                 {% endif %}
 
