--- a/templates/user/envoi_chronopost.html.twig
+++ b/templates/user/envoi_chronopost.html.twig
@@ -3,22 +3,22 @@
 {% block body %}
     {% if user %}
     <p>
-        Hey ! tu a reussi {{ user.firstname }}
+        Hey ! tu as reussi {{ user.firstname }}
     </p>
     <p>
-        Désormais tu peux imprimer ton étiquette chronospost et l'a coller sur ton colis, aucun frais ne t'ai demandé ! <br>
-        Une fenêtre s'ouvrira, tu pourra l'imprimer de suite et un mail te sera envoyé contenant l'étiquette,
-        si tu souhaite l'imprimer plus tard.
+        Désormais tu peux imprimer ton étiquette chronospost et la coller sur ton colis, aucun frais ne t'est demandé ! <br>
+        Une fenêtre s'ouvrira, tu pourras l'imprimer de suite et un mail te sera envoyé contenant l'étiquette,
+        si tu souhaites l'imprimer plus tard.
     </p>
-    <a class="btn btn-primary" href="{{ path('api_chronopost_ae', {'id': user.id}) }}"
-    >Génére mon étiquette
+    <a class="btn btn-primary" href="{{ path('api_chronopost_ae', {'id': user.id}) }}">
+        Générer mon étiquette
     </a><br>
     <p>
-        Ou alors, tu préfére recevoir un code sur ton tel, par message, et déposer ton colis avec ce code, l'étiquette
+        Ou alors, tu préféres recevoir un code sur ton tel, par message, et déposer ton colis avec ce code, l'étiquette
         sera générée lors de ton passage au bureau de poste.
     </p>
     <a class="btn btn-primary" href="{{ path('api_chronopost_se', {'id': user.id}) }}">
-        Envoi mon code
+        Recevoir mon code
     </a>
     {% else %}
         <div class="jumbotron">
