Ajusting bootsrap for buttons

--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -71,6 +71,10 @@
                 <div class="row align-items-center mt-5">
                     <div class="offset-2 col-8 text-center">
                     Aucune collecte ne te convient ?
+                    </div>
+                </div>
+                <div class="row align-items-center mt-2">
+                    <div class="offset-2 col-8 text-center">
                         <a class="btn btn-warning" href="{{ path('add_message') }}">
                             Propose un lieu ou une date !
                         </a>
